# playwrights-pen

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  OFFLINE_INSTALL_GUIDE.md  README.md  check_whl_content.py  debug_offline.py  download_for_arm64.bat  package-lock.json  pyproject.toml  take_screenshot.py  test_baidu.py  test_e2e.py  test_electron.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
alembic/: env.py
alembic/versions/: e54710b9912a_initial_migration.py
docs/: 用户手册.md  项目设计方案.md
examples/electron-demo/: diag.py  index.html  main.js  package-lock.json  package.json  test_cdp.py  test_playwright.py
py_pkgs/: greenlet-3.1.1-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
src/playwrights_pen/: __init__.py  cli.py  config.py  main.py
src/playwrights_pen/api/: __init__.py  sessions.py  testcases.py
src/playwrights_pen/core/: __init__.py  data_resolver.py  executor.py  orchestrator.py  parser.py  recorder.py  recording_manager.py  result_formatter.py  suite_runner.py
src/playwrights_pen/db/: __init__.py  database.py  models.py
src/playwrights_pen/llm/: client.py
src/playwrights_pen/mcp/: __init__.py  client.py
src/playwrights_pen/models/: __init__.py  module.py  session.py  step.py  suite.py  testcase.py
src/playwrights_pen/skills/: __init__.py  database.py
src/playwrights_pen/storage/: __init__.py  async_repository.py  repository.py
src/playwrights_pen/targets/: __init__.py  base.py  electron.py  web.py
