[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playwrights-pen"
version = "0.1.0"
description = "Natural language automated testing service powered by Playwright MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PlaywrightsPen Team" }
]
keywords = ["playwright", "mcp", "testing", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    # PostgreSQL and database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
playwrights-pen = "playwrights_pen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/playwrights_pen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
